--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,8 @@
 {
   "name": "open-animation-sample",
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "Snap.svg": "^0.4.1",
+    "animejs": "^1.1.2"
+  }
 }
