--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "Snap.svg": "^0.4.1",
-    "animejs": "^1.1.2"
+    "animejs": "^1.1.2",
+    "hover": "^2.1.0"
   }
 }
